[package]
name = "passnag"
version = "0.1.0"
authors = ["Max Siling <root@goldstein.lol>"]
edition = "2021"
rust-version = "1.81"
description = "a tool that nags you to train your passwords"
repository = "https://github.com/GoldsteinE/passnag"
license = "GPL-3.0-only"
categories = ["command-line-utilities"]

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "zeroize"] }
rand_core = { version = "0.6.4", features = ["getrandom"] } # version compat with argon2
libc = "0.2.169"
serde = { version = "1.0.217", features = ["derive"] }
stdont = "0.1.0"
toml = "0.8.20"
zeroize = "1.8.1"

# lint me harder~
[lints.rust]
non_ascii_idents = "forbid"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
elided_lifetimes_in_paths = "deny"
meta_variable_misuse = "deny"
noop_method_call = "deny"
unused_lifetimes = "deny"

[lints.clippy]
wildcard_dependencies = "deny"
debug_assert_with_mut_call = "deny"
empty_line_after_outer_attr = "deny"
redundant_field_names = "deny"
rest_pat_in_fully_bound_structs = "deny"
unneeded_field_pattern = "deny"
useless_let_if_seq = "deny"
pedantic = { level = "warn", priority = -1 }
